Repaired logo-header property that was overwrited when light or dark mode is applied

--- a/public/css/common_styles.css
+++ b/public/css/common_styles.css
@@ -246,10 +246,6 @@ div.center {
   max-width: 100%;
   max-height: 100%;
   padding: 10px;
-  background-position: 50% 50%;
-  -webkit-background-size: contain;
-  background-size: contain;
-  background-repeat: no-repeat;
   width:500px;
   height:100%;
 }
